<resources>
    <string name="app_name">Yucca Slim</string>
    <string name="action_settings">Settings</string>
    <string name="registration_email">Email</string>
    <string name="click_message">object clicked</string>
    <string name="registration_weight">Weight (kg)</string>
    <string name="registration_age">Age</string>
    <string name="registration_name">Name</string>

    <!--for saripaar validation-->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="alpha_numeric">Alpha Numeric (Max Length 12)</string>
    <string name="submit">Submit</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="terms_and_conditions">I agree to the terms and conditions</string>
    <string name="max_value">Max Value (10)</string>
    <string name="min_value">Min Value(2)</string>
    <string name="value_range">Value between 2 and 10</string>
    <string name="first_field">First field to verify</string>
    <string name="name_validation">Please let me know your name</string>
    <string name="name_length_validation">Name must not empty nor longer than 100 characters</string>
    <string name="max_weight_validation">Weight must less than 300kg</string>
    <string name="min_weight_validation">weight must larger than 10kg</string>
    <string name="max_food_validation">Food Input must less than 1000g</string>
    <string name="min_food_validation">Food input must larger than 1g</string>
    <string name="email_validation">Please provide correct email address</string>
    <string name="confirm_email_validation">Wrong email address</string>
    <string name="min_age_validation">Baby less than 1 year</string>
    <string name="max_age_validation">human live over 300 years don\'t need this</string>
    <string name="gender_validation">Please select your gender</string>
    <string name="title_activity_today">Today</string>
    <string name="button_label_change">Change</string>
    <string name="action_add_weight">Weight</string>
    <string name="action_logout">Logout</string>
    <string name="text_label_unit">g</string>
    <string name="action_add_food">Add Food</string>
    <string name="title_sleep">Sleep OR Weak Up</string>
    <string name="text_sleep">SLEEP</string>
    <string name="text_wakeup">WAKE UP</string>
    <string name="button_add">Add</string>
    <string name="menu_item_today">Today</string>
    <string name="menu_item_last_week">Last Week</string>
    <string name="menu_item_last_month">Last Month</string>
    <string name="text_today">Today</string>
    <string name="text_yesterday">Yesterday</string>
    <string name="text_slimHintOverall">Keep Daily Score Within Slim Range</string>
    <string name="activity_type_1">WEIGH</string>
    <string name="activity_type_2">FOOD</string>
    <string name="activity_type_3">SLEEP</string>
    <string name="activity_type_image">activity_type</string>
    <string name="activity_title_food_input_time">Food Taken Time</string>
    <string name="menu_item_guide">Guide</string>
    <string name="key_show_guide_on_start" translatable="false">show_guide_on_start</string>
    <string name="pref_show_guide_on_start">Show Guide On Start</string>
    <string name="label_show">Show</string>
    <string name="label_hide">Hide</string>
    <string name="text_guide_1">Input your weight every day when you wake up and before breakfast.</string>
    <string name="text_guide_2">Input your sleep (including nap) and wake up time every day.</string>
    <string name="text_guide_3">Input the food (including drink) you plan to eat, follow the advice from Cloud AI to choose food and keep daily slim score below 100.</string>
    <string name="text_guide_4">Food color advice:</string>
    <string name="text_guide_5">Green: Low slim score food, slim food, free to eat!</string>
    <string name="text_guide_6">Yellow: High slim score food, eat less!</string>
    <string name="text_guide_7">Red: Ultra high slim score food, Do not eat!</string>
    <string name="text_guide_8">Keep your daily slim score below 100 every day and you will soon start losing weight!</string>
    <string name="text_guide_9"> </string>
    <string name="text_guide_10"> </string>
    <string name="text_guide_title">Guide</string>
    <string name="button_buy">Buy</string>
    <string name="alert_already_purchased">Item is already purchased</string>
    <string name="content_description_app_loading_image">App loading image</string>
    <string name="button_purchase">Purchase</string>
    <string name="error_no_skus"><![CDATA[We didn\\\'t find any SKUs to display&#8230;]]></string>
    <string name="error_billing_unavailable">Billing unavailable</string>
    <string name="error_billing_default">Billing unavailable. Please check your device.</string>
    <string name="header_inapp">One-time deals</string>
    <string name="header_subscriptions">Subscriptions</string>
    <string name="button_own">Own</string>
    <string name="registration_confirm_email">Confirm Email</string>
    <string name="registration_password">Password</string>
    <string name="registration_password_confirm">Confirm Password</string>
    <string name="title_registration">Registration</string>
    <string name="button_label_purchase">Purchase</string>
    <string name="validation_password_number">Password must be minimum 6 numbers</string>
    <string name="message_purchase_successful">Purchase successful, registering your account, please wait for registration result. You may contact the support if you have any issue</string>
    <string name="message_registration_successful">Account registration successful! please login with your registered email and password. If you forget your login email and password, please email to yuccasupport@yuccaworld.com</string>
    <string name="message_registration_fail">Account registration failed! please check if your subscription is active, you may email to yuccasupport@yuccaworld.com for further support</string>
    <string name="message_registration_exists">Account already exists! please proceed to login. you can email to yuccasupport@yuccaworld.com for further support</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_guide_1_2">1. Weight Every Morning</string>
    <string name="text_guide_2_1">2. Time Sleep and Awake</string>
    <string name="text_guide_3_1">3. Eat To Slim</string>
</resources>

