<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/logout"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_food"
        android:icon="@drawable/ic_food_24"
        android:title="@string/action_add_food"
        app:showAsAction="always" />
    <item
        android:id="@+id/add_weight"
        android:icon="@drawable/ic_meter_24dp"
        android:title="@string/action_add_weight"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_add_sleep"
        android:icon="@drawable/ic_sleep_black_24dp"
        android:title="@string/text_sleep"
        app:showAsAction="always" />
</menu>